plugins {
    id 'org.springframework.boot' version '2.6.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'sample'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-aop'
}

def javaagent() {
    def jarFile = configurations.runtimeClasspath.filter(f -> f.name.contains('aspectjweaver'))[0]
    "-javaagent:${jarFile}" as String
}

bootRun {
    jvmArgs = [
        javaagent(),
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '-Daj.weaving.verbose=true',
        '-Dorg.aspectj.weaver.showWeaveInfo=true'
    ]
}
